@@ -6,6 +6,7 @@ Changes from jTDS 0.8.1
    Mike Hutchinson for the patch)
  o Corrected bug introduced in Clob optimization.
  o Added test for bug [992715] wasnull() always returns false
+ o Added test for bug [991640] java.sql.Date error and RAISERROR problem
 
 07/17/2004 - Brian Heineman
  o Applied patch in bug [992971], which corrects bug [992976] Zero length
